--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@feathersjs/errors": "^4.5.3",
+    "@feathersjs/express": "^4.5.4",
+    "@feathersjs/feathers": "^4.5.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.18.0",
+    "cors": "^2.8.4",
+    "feathers-nedb": "^5.1.0",
+    "http-proxy-middleware": "^0.19.0",
+    "morgan": "^1.9.0",
+    "nedb": "^1.8.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "3.4.1",
+    "serverless-http": "^1.6.0",
+    "winston": "^3.0.0"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=dev npm-run-all --parallel start:app start:server",
@@ -20,6 +33,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "cross-env": "^7.0.2",
     "netlify-lambda": "^0.4.0",
     "npm-run-all": "^4.1.3"
   },
@@ -27,7 +41,11 @@
     "extends": "react-app"
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
@@ -35,4 +53,3 @@
     ]
   }
 }
-
