formatting and new db data according to styles

--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "cors": "^2.8.4",
     "feathers-nedb": "^5.1.0",
     "http-proxy-middleware": "^0.19.0",
     "morgan": "^1.9.0",
     "nedb": "^1.8.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "16.4.1",
+    "react-dom": "16.4.1",
+    "redux-form": "^7.4.2",
+    "redux": "^4.0.0",
     "react-redux": "^5.0.7",
+    "redux-promise-middleware": "^5.1.1",
+    "redux-thunk": "^2.3.0",
+    "redux-devtools-extension": "^2.13.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.4.1",
+    "semantic-ui-react": "^0.82.0",
     "serverless-http": "^1.6.0",
     "winston": "^3.0.0"
   },
