--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@feathersjs/errors": "^4.5.3",
     "@feathersjs/express": "^4.5.4",
     "@feathersjs/feathers": "^4.5.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -16,16 +19,16 @@
     "http-proxy-middleware": "^0.19.0",
     "morgan": "^1.9.0",
     "nedb": "^1.8.0",
-    "react": "16.4.1",
-    "react-dom": "16.4.1",
-    "redux-form": "^7.4.2",
-    "redux": "^4.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^3.4.1",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-form": "^7.4.2",
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0",
-    "redux-devtools-extension": "^2.13.5",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "3.4.1",
     "semantic-ui-react": "^0.82.0",
     "serverless-http": "^1.6.0",
     "winston": "^3.0.0"
