--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@feathersjs/express": "^4.5.4",
     "@feathersjs/feathers": "^4.5.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@testing-library/jest-dom": "^4.2.4",
@@ -30,7 +31,6 @@
     "redux-form": "^7.4.2",
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.0",
     "serverless-http": "^1.6.0",
     "winston": "^3.0.0"
